[metadata]
name = pwn_modeling
description = Modeling of PWN development inside a SNR
author = Jakub Jurysek
author_email = 
license = BSD 3-Clause
url=https://github.com/jurysek/pwn_modeling
long_description = file: README.md
long_description_content_type = text/markdown
github_project = jurysek/pwn_modeling

[options]
python_requires = >=3.8
